--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div class="inner">
                                 <h4>うらがみさん</h4>
                                 <p>大阪のプログラマです。GitHubを日常的に利用しています。</p>
-                                <p>一年間毎日コミットをしてプロフィールページのcontributionsを緑一色にしたことがあります。</p>
+                                <p>ぴゃー－－－－－－－－－－</p>
                             </div>
                         </div>
                     </article>
